src/objects/PtAppointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_time__c</fullName>
        <label>Appointment time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pt__c</fullName>
        <label>Patient detail</label>
        <referenceTo>details__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_appointment__c</fullName>
        <label>Reason for appointment</label>
        <picklist>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetic review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eczema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General check up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hay Fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunisation (flu Jab etc..)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stomach upset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ulcer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper respiratory infection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viral infection</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Pt Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>